{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 202,
  "lineage": "f13df507-04dd-35f7-b739-1c1fe9cc6cee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a699202e5027c10d",
            "arn": "arn:aws:ec2:us-east-1:375839634801:instance/i-0dbb8d213fa875e41",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2user",
            "id": "i-0dbb8d213fa875e41",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "graha",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d6e526620da90c84",
            "private_dns": "ip-10-30-1-125.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.1.125",
            "public_dns": "ec2-34-228-25-81.compute-1.amazonaws.com",
            "public_ip": "34.228.25.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b215a8497002bf33",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-012df65e34c3a015a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d00a5104ce11007e",
            "tags": {
              "Name": "dev-server1"
            },
            "tags_all": {
              "Name": "dev-server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-012df65e34c3a015a"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375839634801:internet-gateway/igw-043427a251e226165",
            "id": "igw-043427a251e226165",
            "owner_id": "375839634801",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0b661762e36f5b93a"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "applicationloadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:375839634801:loadbalancer/app/priyaalb/ec5b8b6c817d45c3",
            "arn_suffix": "app/priyaalb/ec5b8b6c817d45c3",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "priyaalb-1313018224.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:375839634801:loadbalancer/app/priyaalb/ec5b8b6c817d45c3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "priyaalb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-012df65e34c3a015a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09d25650037858f08"
              },
              {
                "subnet_id": "subnet-0d00a5104ce11007e"
              },
              {
                "subnet_id": "subnet-0ee802e51994d9159"
              }
            ],
            "subnets": [
              "subnet-09d25650037858f08",
              "subnet-0d00a5104ce11007e",
              "subnet-0ee802e51994d9159"
            ],
            "vpc_id": "vpc-0b661762e36f5b93a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alblisten",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:375839634801:listener/app/priyaalb/ec5b8b6c817d45c3/48186b625c9b0e7a",
            "certificate_arn": "arn:aws:acm:us-east-1:375839634801:certificate/86e51954-c5ff-4e72-8ea4-f1bc79049ed5",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:375839634801:targetgroup/priyatg/b1255f30e2db1f35",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:375839634801:listener/app/priyaalb/ec5b8b6c817d45c3/48186b625c9b0e7a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:375839634801:loadbalancer/app/priyaalb/ec5b8b6c817d45c3",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.certificate",
            "aws_lb.applicationloadbalancer",
            "aws_lb_target_group.albtg",
            "aws_security_group.sg",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "albtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:375839634801:targetgroup/priyatg/b1255f30e2db1f35",
            "arn_suffix": "targetgroup/priyatg/b1255f30e2db1f35",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:375839634801:targetgroup/priyatg/b1255f30e2db1f35",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "priyatg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dev-alb"
            },
            "tags_all": {
              "Name": "dev-alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b661762e36f5b93a"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "albattach1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:375839634801:targetgroup/priyatg/b1255f30e2db1f35-20240413070647537600000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:375839634801:targetgroup/priyatg/b1255f30e2db1f35",
            "target_id": "i-0dbb8d213fa875e41"
          },
          "dependencies": [
            "aws_instance.server1",
            "aws_lb_target_group.albtg",
            "aws_security_group.sg",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375839634801:route-table/rtb-02e43a9b1bdc6e83e",
            "id": "rtb-02e43a9b1bdc6e83e",
            "owner_id": "375839634801",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043427a251e226165",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-publicrt"
            },
            "tags_all": {
              "Name": "dev-publicrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b661762e36f5b93a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ad4d1bfbb76e4c5",
            "route_table_id": "rtb-02e43a9b1bdc6e83e",
            "subnet_id": "subnet-0d00a5104ce11007e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicrt",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aacb2be82cd971d4",
            "route_table_id": "rtb-02e43a9b1bdc6e83e",
            "subnet_id": "subnet-0ee802e51994d9159"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicrt",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0758c458ef92b4d5a",
            "route_table_id": "rtb-02e43a9b1bdc6e83e",
            "subnet_id": "subnet-09d25650037858f08"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicrt",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375839634801:security-group/sg-012df65e34c3a015a",
            "description": "sg creation",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012df65e34c3a015a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "priyasg",
            "name_prefix": "",
            "owner_id": "375839634801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-sg"
            },
            "tags_all": {
              "Name": "dev-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b661762e36f5b93a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375839634801:subnet/subnet-0d00a5104ce11007e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d00a5104ce11007e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "375839634801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-publicsubnet"
            },
            "tags_all": {
              "Name": "dev-publicsubnet"
            },
            "vpc_id": "vpc-0b661762e36f5b93a"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375839634801:subnet/subnet-0ee802e51994d9159",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee802e51994d9159",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "375839634801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-publicsubnet"
            },
            "tags_all": {
              "Name": "dev-publicsubnet"
            },
            "vpc_id": "vpc-0b661762e36f5b93a"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375839634801:subnet/subnet-09d25650037858f08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.30.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d25650037858f08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "375839634801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-publicsubnet"
            },
            "tags_all": {
              "Name": "dev-publicsubnet"
            },
            "vpc_id": "vpc-0b661762e36f5b93a"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375839634801:vpc/vpc-0b661762e36f5b93a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-015a264a2047d7a43",
            "default_route_table_id": "rtb-0c880a6bffd803430",
            "default_security_group_id": "sg-063ff071f71f7ab81",
            "dhcp_options_id": "dopt-09ec78ca4ddc7d38d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b661762e36f5b93a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c880a6bffd803430",
            "owner_id": "375839634801",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}